--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -13,9 +13,10 @@ form {
   }
   
   .form-container {
-    width: 40%;
+    width: 35%;
     padding: 1rem;
     background-color: antiquewhite;
+    position: fixed;
   }
   
   .form-input {
@@ -30,17 +31,23 @@ form {
     font-weight: bolder;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    margin: 0 auto;
   }
 
   label span {
     margin: 15px 0;
   }
   
-  input, select {
+  input, select{
     width: 300px;
     font-size: 16px;
     padding: 5px;
+  }
+
+  select {
+    padding: 5px;
+    margin: 0;
+    width: 314px;
   }
   
   .date-container {
