--- a/src/components/TaskPanel.css
+++ b/src/components/TaskPanel.css
@@ -3,9 +3,10 @@
     text-align: left;
     height: 100vh;
     position: relative;
-    left: 37%;
+    left: 37.4%;
     right: 0;
     width: 63%;
+    background-color: rgb(246, 244, 244);
 }
 
 header h1 {
@@ -17,8 +18,48 @@ header h1 {
     /* background-color: blue; */
 }
 
+.table {
+    margin: 50px auto;
+    background-color: antiquewhite;
+    display: block;
+    overflow: hidden;
+    border-collapse: collapse;
+    box-shadow: 0px 6px 6px #ccc;
+    border-radius: 8px;
+    white-space: nowrap;
+    width: 100em;
+    max-width: 90%;
+    table-layout: fixed;
+    overflow-x: auto;
+}
+
+.table thead {
+    background-color: rgb(188, 228, 244);
+    background-color: rgb(212, 243, 255);
+    background-color: #d4efda;
+
+    /* background-color: #acecba; */
+}
+
+.table th {
+    font-size: large;
+}
+
+.table th, .table td {
+    padding: 1rem;
+}
+
+.table td {
+    background-color: white;
+}
+
+.expand {
+    width: 80%;
+}
+
 .task-item {
     background-color: rgb(196, 216, 255);
+    background-color: rgb(213, 227, 254);
     display: flex;
     justify-content: space-between;
     align-items: center;
