--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -15,7 +15,7 @@ form {
   .form-container {
     width: 35%;
     padding: 1rem;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     position: fixed;
   }
   
