--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -66,5 +66,11 @@ form {
     padding: 16px;
     text-transform: uppercase;
     cursor: pointer;
+    box-shadow: 0 3px 3px #ccc;
   }
-  
+
+  .submit button:hover {
+    background-color: #7ca585;
+    transform: scale(1.1);
+    font-weight: bold;
+  }
