--- a/src/components/TaskPanel.css
+++ b/src/components/TaskPanel.css
@@ -20,7 +20,7 @@ header h1 {
 
 .table {
     margin: 50px auto;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     display: block;
     overflow: hidden;
     border-collapse: collapse;
@@ -54,7 +54,22 @@ header h1 {
 }
 
 .expand {
-    width: 80%;
+    width: 100%;
+}
+
+.action-btn {
+    border: none;
+    border-radius: 12px;
+    padding: 8px;
+    font-size: medium;
+    cursor: pointer;
+    margin: 0;
+}
+
+.action-btn:hover {
+    background-color: #7ca585;
+    color: white;
+    transform: scale(1.1);
 }
 
 .task-item {
@@ -75,7 +90,6 @@ header h1 {
 }
 
 button:hover {
-    background-color: rgb(0, 123, 255);
-    transform: scale(1.1);
-    color: white;
+    /* background-color: rgb(0, 123, 255); */
+    color: white; 
 }
